--- a/artikel/04.tex
+++ b/artikel/04.tex
@@ -137,7 +137,7 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
   \item „verbindliche interne Datenschutzvorschriften“ Maßnahmen zum Schutz \hyperref[itm:04-1]{personenbezogener Daten}, zu deren Einhaltung
    sich ein im Hoheitsgebiet eines Mitgliedstaats niedergelassener Verantwortlicher oder Auftragsverarbeiter
    verpflichtet im Hinblick auf Datenübermittlungen oder eine Kategorie von Datenübermittlungen \hyperref[itm:04-1]{personenbezogener Daten}
-   an einen Verantwortlichen oder Auftragsverarbeiter derselben Unternehmensgruppe oder derselben Gruppe von
+   an einen Verantwortlichen oder Auftragsverarbeiter derselben \hyperref[itm:04-19]{Unternehmensgruppe} oder derselben Gruppe von
    Unternehmen, die eine gemeinsame Wirtschaftstätigkeit ausüben, in einem oder mehreren Drittländern;
   \label{itm:04-20}
 
