--- a/artikel/37.tex
+++ b/artikel/37.tex
@@ -27,7 +27,7 @@
 
   \end{enumerate}
 
-  \item Eine Unternehmensgruppe darf einen gemeinsamen Datenschutzbeauftragten ernennen, sofern von jeder Niederlassung
+  \item Eine \hyperref[itm:04-19]{Unternehmensgruppe} darf einen gemeinsamen Datenschutzbeauftragten ernennen, sofern von jeder Niederlassung
    aus der Datenschutzbeauftragte leicht erreicht werden kann.
   \label{itm:37-2}
 
