--- a/artikel/47.tex
+++ b/artikel/47.tex
@@ -12,7 +12,7 @@
 
   \begin{enumerate}
   
-    \item rechtlich bindend sind, für alle betreffenden Mitglieder der Unternehmensgruppe oder einer Gruppe von
+    \item rechtlich bindend sind, für alle betreffenden Mitglieder der \hyperref[itm:04-19]{Unternehmensgruppe} oder einer Gruppe von
      Unternehmen, die eine gemeinsame Wirtschaftstätigkeit ausüben, gelten und von diesen Mitgliedern durchgesetzt
      werden, und dies auch für ihre Beschäftigten gilt,
     \label{itm:47-1a}
@@ -32,7 +32,7 @@
 
   \begin{enumerate}
   
-    \item Struktur und Kontaktdaten der Unternehmensgruppe oder Gruppe von Unternehmen, die eine gemeinsame
+    \item Struktur und Kontaktdaten der \hyperref[itm:04-19]{Unternehmensgruppe} oder Gruppe von Unternehmen, die eine gemeinsame
      Wirtschaftstätigkeit ausüben, und jedes ihrer Mitglieder;
     \label{itm:4722a}
 
@@ -62,7 +62,7 @@
 
     \item die von dem in einem Mitgliedstaat niedergelassenen Verantwortlichen oder Auftragsverarbeiter übernommene
      Haftung für etwaige Verstöße eines nicht in der Union niedergelassenen betreffenden Mitglieds der
-     Unternehmensgruppe gegen die \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften}; der Verantwortliche oder der
+     \hyperref[itm:04-19]{Unternehmensgruppe} gegen die \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften}; der Verantwortliche oder der
      Auftragsverarbeiter ist nur dann teilweise oder vollständig von dieser Haftung befreit, wenn er nachweist, dass
      der Umstand, durch den der Schaden eingetreten ist, dem betreffenden Mitglied nicht zur Last gelegt werden kann;
     \label{itm:47-2f}
@@ -75,19 +75,19 @@
 
     \item die Aufgaben jedes gemäß \hyperref[ch:37]{Artikel 37} benannten Datenschutzbeauftragten oder jeder anderen
      Person oder Einrichtung, die mit der Überwachung der Einhaltung der \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften}
-     in der Unternehmensgruppe oder Gruppe von Unternehmen, die eine gemeinsame Wirtschaftstätigkeit ausüben, sowie mit
+     in der \hyperref[itm:04-19]{Unternehmensgruppe} oder Gruppe von Unternehmen, die eine gemeinsame Wirtschaftstätigkeit ausüben, sowie mit
      der Überwachung der Schulungsmaßnahmen und dem Umgang mit Beschwerden befasst ist;
     \label{itm:47-2h}
 
     \item die Beschwerdeverfahren;
     \label{itm:47-2i}
 
-    \item die innerhalb der Unternehmensgruppe oder Gruppe von Unternehmen, die eine gemeinsame Wirtschaftstätigkeit
+    \item die innerhalb der \hyperref[itm:04-19]{Unternehmensgruppe} oder Gruppe von Unternehmen, die eine gemeinsame Wirtschaftstätigkeit
      ausüben, bestehenden Verfahren zur Überprüfung der Einhaltung der \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften}.
      Derartige Verfahren beinhalten Datenschutzüberprüfungen und Verfahren zur Gewährleistung von Abhilfemaßnahmen zum
      Schutz der Rechte der \hyperref[itm:04-1]{betroffenen Person}. Die Ergebnisse derartiger Überprüfungen sollten der in \hyperref
      [itm:47-2h]{Buchstabe h} genannten Person oder Einrichtung sowie dem Verwaltungsrat des herrschenden Unternehmens
-     einer Unternehmensgruppe oder der Gruppe von Unternehmen, die eine gemeinsame Wirtschaftstätigkeit ausüben,
+     einer \hyperref[itm:04-19]{Unternehmensgruppe} oder der Gruppe von Unternehmen, die eine gemeinsame Wirtschaftstätigkeit ausüben,
      mitgeteilt werden und sollten der zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} auf Anfrage zur Verfügung gestellt werden;
     \label{itm:47-2j}
 
@@ -96,13 +96,13 @@
     \label{itm:47-2k}
 
     \item die Verfahren für die Zusammenarbeit mit der \hyperref[itm:04-21]{Aufsichtsbehörde}, die die Befolgung der Vorschriften durch
-     sämtliche Mitglieder der Unternehmensgruppe oder Gruppe von Unternehmen, die eine gemeinsame Wirtschaftstätigkeit
+     sämtliche Mitglieder der \hyperref[itm:04-19]{Unternehmensgruppe} oder Gruppe von Unternehmen, die eine gemeinsame Wirtschaftstätigkeit
      ausüben, gewährleisten, insbesondere durch Offenlegung der Ergebnisse von Überprüfungen der unter \hyperref
      [itm:47-2j]{Buchstabe j} genannten Maßnahmen gegenüber der \hyperref[itm:04-21]{Aufsichtsbehörde};
     \label{itm:47-2l}
 
     \item die Meldeverfahren zur Unterrichtung der zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} über jegliche für ein Mitglied der
-     Unternehmensgruppe oder Gruppe von Unternehmen, die eine gemeinsame Wirtschaftstätigkeit ausüben, in einem
+     \hyperref[itm:04-19]{Unternehmensgruppe} oder Gruppe von Unternehmen, die eine gemeinsame Wirtschaftstätigkeit ausüben, in einem
      Drittland geltenden rechtlichen Bestimmungen, die sich nachteilig auf die Garantien auswirken könnten, die die
      \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften} bieten, und
     \label{itm:47-2m}
