--- a/artikel/88.tex
+++ b/artikel/88.tex
@@ -19,7 +19,7 @@
 
   \item Diese Vorschriften umfassen angemessene und besondere Maßnahmen zur Wahrung der menschlichen Würde, der
    berechtigten Interessen und der Grundrechte der \hyperref[itm:04-1]{betroffenen Person}, insbesondere im Hinblick auf die Transparenz der
-   \hyperref[itm:04-2]{Verarbeitung}, die Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} innerhalb einer Unternehmensgruppe oder einer Gruppe von
+   \hyperref[itm:04-2]{Verarbeitung}, die Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} innerhalb einer \hyperref[itm:04-19]{Unternehmensgruppe} oder einer Gruppe von
    Unternehmen, die eine gemeinsame Wirtschaftstätigkeit ausüben, und die Überwachungssysteme am Arbeitsplatz.
   \label{itm:88-2}
 
