--- a/artikel/04.tex
+++ b/artikel/04.tex
@@ -130,15 +130,15 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
    Tätigkeit nachgehen;
   \label{itm:04-18}
 
-  \item „Unternehmensgruppe“ eine Gruppe, die aus einem herrschenden Unternehmen und den von diesem abhängigen
-   Unternehmen besteht;
+  \item „Unternehmensgruppe“ eine Gruppe, die aus einem herrschenden \hyperref[itm:04-18]{Unternehmen} und den von diesem abhängigen
+   \hyperref[itm:04-18]{Unternehmen} besteht;
   \label{itm:04-19}
 
   \item „verbindliche interne Datenschutzvorschriften“ Maßnahmen zum Schutz \hyperref[itm:04-1]{personenbezogener Daten}, zu deren Einhaltung
    sich ein im Hoheitsgebiet eines Mitgliedstaats niedergelassener Verantwortlicher oder Auftragsverarbeiter
    verpflichtet im Hinblick auf Datenübermittlungen oder eine Kategorie von Datenübermittlungen \hyperref[itm:04-1]{personenbezogener Daten}
    an einen Verantwortlichen oder Auftragsverarbeiter derselben \hyperref[itm:04-19]{Unternehmensgruppe} oder derselben Gruppe von
-   Unternehmen, die eine gemeinsame Wirtschaftstätigkeit ausüben, in einem oder mehreren Drittländern;
+   \hyperref[itm:04-18]{Unternehmen}, die eine gemeinsame Wirtschaftstätigkeit ausüben, in einem oder mehreren Drittländern;
   \label{itm:04-20}
 
   \item „Aufsichtsbehörde“ eine von einem Mitgliedstaat gemäß \hyperref[ch:51]{Artikel 51} eingerichtete unabhängige
