--- a/artikel/30.tex
+++ b/artikel/30.tex
@@ -76,7 +76,7 @@
   \label{itm:30-4}
 
   \item Die in den Absätzen \hyperref[itm:30-1]{1} und \hyperref[itm:30-2]{2} genannten Pflichten gelten nicht für
-   Unternehmen oder Einrichtungen, die weniger als 250 Mitarbeiter beschäftigen, sofern die von ihnen vorgenommene
+   \hyperref[itm:04-18]{Unternehmen} oder Einrichtungen, die weniger als 250 Mitarbeiter beschäftigen, sofern die von ihnen vorgenommene
    \hyperref[itm:04-2]{Verarbeitung} nicht ein Risiko für die Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Personen} birgt, die \hyperref[itm:04-2]{Verarbeitung} nicht
    nur gelegentlich erfolgt oder nicht die \hyperref[itm:04-2]{Verarbeitung} besonderer Datenkategorien gemäß \hyperref[itm:09-1]{Artikel 9
    Absatz 1} bzw. die  \hyperref[itm:04-2]{Verarbeitung} von \hyperref[itm:04-1]{personenbezogenen Daten} über strafrechtliche Verurteilungen und Straftaten im
