--- a/artikel/36.tex
+++ b/artikel/36.tex
@@ -31,7 +31,7 @@
   
     \item gegebenenfalls Angaben zu den jeweiligen Zuständigkeiten des Verantwortlichen, der gemeinsam Verantwortlichen
      und der an der \hyperref[itm:04-2]{Verarbeitung} beteiligten Auftragsverarbeiter, insbesondere bei einer \hyperref[itm:04-2]{Verarbeitung} innerhalb einer
-     Gruppe von Unternehmen;
+     Gruppe von \hyperref[itm:04-18]{Unternehmen};
     \label{itm:36-3a}
 
     \item die Zwecke und die Mittel der beabsichtigten \hyperref[itm:04-2]{Verarbeitung};
