--- a/artikel/40.tex
+++ b/artikel/40.tex
@@ -8,7 +8,7 @@
 
   \item Die Mitgliedstaaten, die \hyperref[itm:04-21]{Aufsichtsbehörden}, der Ausschuss und die Kommission fördern die Ausarbeitung von
    Verhaltensregeln, die nach Maßgabe der Besonderheiten der einzelnen Verarbeitungsbereiche und der besonderen
-   Bedürfnisse von Kleinstunternehmen sowie kleinen und mittleren Unternehmen zur ordnungsgemäßen Anwendung dieser
+   Bedürfnisse von Kleinstunternehmen sowie kleinen und mittleren \hyperref[itm:04-18]{Unternehmen} zur ordnungsgemäßen Anwendung dieser
    Verordnung beitragen sollen.
   \label{itm:40-1}
 
