--- a/artikel/42.tex
+++ b/artikel/42.tex
@@ -10,7 +10,7 @@
    Unionsebene die Einführung von datenschutzspezifischen Zertifizierungsverfahren sowie von Datenschutzsiegeln
    und -prüfzeichen, die dazu dienen, nachzuweisen, dass diese Verordnung bei Verarbeitungsvorgängen von
    Verantwortlichen oder Auftragsverarbeitern eingehalten wird. Den besonderen Bedürfnissen von Kleinstunternehmen
-   sowie kleinen und mittleren Unternehmen wird Rechnung getragen.
+   sowie kleinen und mittleren \hyperref[itm:04-18]{Unternehmen} wird Rechnung getragen.
   \label{itm:42-1}
 
   \item Zusätzlich zur Einhaltung durch die unter diese Verordnung fallenden Verantwortlichen oder Auftragsverarbeiter
