--- a/artikel/88.tex
+++ b/artikel/88.tex
@@ -20,7 +20,7 @@
   \item Diese Vorschriften umfassen angemessene und besondere Maßnahmen zur Wahrung der menschlichen Würde, der
    berechtigten Interessen und der Grundrechte der \hyperref[itm:04-1]{betroffenen Person}, insbesondere im Hinblick auf die Transparenz der
    \hyperref[itm:04-2]{Verarbeitung}, die Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} innerhalb einer \hyperref[itm:04-19]{Unternehmensgruppe} oder einer Gruppe von
-   Unternehmen, die eine gemeinsame Wirtschaftstätigkeit ausüben, und die Überwachungssysteme am Arbeitsplatz.
+   \hyperref[itm:04-18]{Unternehmen}, die eine gemeinsame Wirtschaftstätigkeit ausüben, und die Überwachungssysteme am Arbeitsplatz.
   \label{itm:88-2}
 
   \item Jeder Mitgliedstaat teilt der Kommission bis zum 25. Mai 2018 die Rechtsvorschriften, die er aufgrund von
