--- a/artikel/56.tex
+++ b/artikel/56.tex
@@ -6,7 +6,7 @@
 
 \begin{enumerate}
 
-  \item Unbeschadet des \hyperref[ch:55]{Artikels 55} ist die \hyperref[itm:04-21]{Aufsichtsbehörde} der Hauptniederlassung oder der einzigen
+  \item Unbeschadet des \hyperref[ch:55]{Artikels 55} ist die \hyperref[itm:04-21]{Aufsichtsbehörde} der \hyperref[itm:04-16]{Hauptniederlassung} oder der einzigen
    Niederlassung des Verantwortlichen oder des Auftragsverarbeiters gemäß dem Verfahren nach \hyperref[ch:60]
    {Artikel 60} die zuständige federführende \hyperref[itm:04-21]{Aufsichtsbehörde} für die von diesem Verantwortlichen oder diesem
    Auftragsverarbeiter durchgeführte \hyperref[itm:04-23]{grenzüberschreitende Verarbeitung}.
