--- a/artikel/60.tex
+++ b/artikel/60.tex
@@ -41,7 +41,7 @@
    Aufsichtsbehörden} als mit dem Beschlussentwurf einverstanden und sind an ihn gebunden.
   \label{itm:60-6}
 
-  \item Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} erlässt den Beschluss und teilt ihn der Hauptniederlassung oder der einzigen
+  \item Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} erlässt den Beschluss und teilt ihn der \hyperref[itm:04-16]{Hauptniederlassung} oder der einzigen
    Niederlassung des Verantwortlichen oder gegebenenfalls des Auftragsverarbeiters mit und setzt die anderen
    \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} und den Ausschuss von dem betreffenden Beschluss einschließlich einer Zusammenfassung
    der maßgeblichen Fakten und Gründe in Kenntnis. Die \hyperref[itm:04-21]{Aufsichtsbehörde}, bei der eine Beschwerde eingereicht worden
@@ -57,7 +57,7 @@
    Beschwerde abzulehnen oder abzuweisen und bezüglich anderer Teile dieser Beschwerde tätig zu werden, so wird in
    dieser Angelegenheit für jeden dieser Teile ein eigener Beschluss erlassen. Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde}
    erlässt den Beschluss für den Teil, der das Tätigwerden in Bezug auf den Verantwortlichen betrifft, teilt ihn der
-   Hauptniederlassung oder einzigen Niederlassung des Verantwortlichen oder des Auftragsverarbeiters im Hoheitsgebiet
+   \hyperref[itm:04-16]{Hauptniederlassung} oder einzigen Niederlassung des Verantwortlichen oder des Auftragsverarbeiters im Hoheitsgebiet
    ihres Mitgliedstaats mit und setzt den Beschwerdeführer hiervon in Kenntnis, während die für den Beschwerdeführer
    zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} den Beschluss für den Teil erlässt, der die Ablehnung oder Abweisung dieser Beschwerde
    betrifft, und ihn diesem Beschwerdeführer mitteilt und den Verantwortlichen oder den Auftragsverarbeiter hiervon in
