--- a/artikel/65.tex
+++ b/artikel/65.tex
@@ -20,7 +20,7 @@
     \label{itm:65-1a}
 
     \item wenn es widersprüchliche Standpunkte dazu gibt, welche der \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} für die
-     Hauptniederlassung zuständig ist,
+     \hyperref[itm:04-16]{Hauptniederlassung} zuständig ist,
     \label{itm:65-1b}
 
     \item wenn eine zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} in den in \hyperref[itm:64-1]{Artikel 64 Absatz 1} genannten Fällen
