--- a/artikel/09.tex
+++ b/artikel/09.tex
@@ -9,7 +9,7 @@
   \item Die \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten}, aus denen die rassische und ethnische Herkunft, politische Meinungen,
    religiöse oder weltanschauliche Überzeugungen oder die Gewerkschaftszugehörigkeit hervorgehen, sowie die
    \hyperref[itm:04-2]{Verarbeitung} von \hyperref[itm:04-13]{genetischen Daten}, \hyperref[itm:04-14]{biometrischen Daten} zur eindeutigen Identifizierung einer natürlichen Person,
-   Gesundheitsdaten oder Daten zum Sexualleben oder der sexuellen Orientierung einer natürlichen Person ist untersagt.
+   \hyperref[itm:04-15]{Gesundheitsdaten} oder Daten zum Sexualleben oder der sexuellen Orientierung einer natürlichen Person ist untersagt.
   \label{itm:09-1}
 
   \item \hyperref[itm:09-1]{Absatz 1} gilt nicht in folgenden Fällen:
@@ -90,7 +90,7 @@
   \label{itm:09-3}
 
   \item Die Mitgliedstaaten können zusätzliche Bedingungen, einschließlich Beschränkungen, einführen oder
-   aufrechterhalten, soweit die \hyperref[itm:04-2]{Verarbeitung} von \hyperref[itm:04-13]{genetischen}, \hyperref[itm:04-14]{biometrischen} oder Gesundheitsdaten
+   aufrechterhalten, soweit die \hyperref[itm:04-2]{Verarbeitung} von \hyperref[itm:04-13]{genetischen}, \hyperref[itm:04-14]{biometrischen} oder \hyperref[itm:04-15]{Gesundheitsdaten}
    betroffen ist.
   \label{itm:09-4}
 
